--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,20 @@
 			<optional>true</optional>
 		</dependency>
 
+		 <!-- JUnit 5 -->
+    	<dependency>
+        	<groupId>org.junit.jupiter</groupId>
+        	<artifactId>junit-jupiter-api</artifactId>
+        	<scope>test</scope>
+    	</dependency>
+
+   		 <!-- Mockito  -->
+    	<dependency>
+        	<groupId>org.mockito</groupId>
+        	<artifactId>mockito-core</artifactId>
+        	<scope>test</scope>
+    	</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
